--- a/app/src/main/res/layout/activity_ch1_result.xml
+++ b/app/src/main/res/layout/activity_ch1_result.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".`02_ResultActivity`">
+    tools:context=".Ch1_ResultActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
