--- a/app/src/main/res/layout/activity_ch2_main.xml
+++ b/app/src/main/res/layout/activity_ch2_main.xml
@@ -52,6 +52,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="1"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_blue"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
@@ -63,6 +66,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="1"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_yellow"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
@@ -74,6 +80,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="1"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_red"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
@@ -85,6 +94,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="1"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_gray"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
@@ -96,6 +108,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="1"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_green"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
@@ -107,6 +122,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="1"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/circle_blue"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
