--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="Theme.30개프로젝트로배우는Android앱개발WithKotlie.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
 </resources>
