--- a/app/src/main/res/layout/activity_ch4_main.xml
+++ b/app/src/main/res/layout/activity_ch4_main.xml
@@ -16,11 +16,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_weight="1"/>
 
+
+
     <TableLayout
         android:id="@+id/keypadTableLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:shrinkColumns="*"
+        android:paddingTop="21dp"
+        android:paddingBottom="21dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,24 +35,262 @@
 
         <TableRow android:layout_weight="1" >
 
-            <Button/>
-            <Button/>
-            <Button/>
-            <Button/>
-            <Button/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/clearButton"
+                android:background="@drawable/button_background"
+                android:text="C"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="clearButtonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="()"
+                android:textColor="@color/green"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:enabled="false"
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="%"
+                android:textColor="@color/green"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="/"
+                android:textSize="24sp"
+                android:textColor="@color/green"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
 
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="7"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="8"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="9"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="X"
+                android:textSize="24sp"
+                android:textColor="@color/green"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="4"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="5"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="6"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="-"
+                android:textSize="24sp"
+                android:textColor="@color/green"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="1"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="2"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="3"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="+"
+                android:textSize="24sp"
+                android:textColor="@color/green"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="buttonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
+            <ImageButton
+                android:id="@+id/historyButton"
+                android:background="@drawable/button_background"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="historyButtonClicked"
+                android:src="@drawable/ic_baseline_history_24"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="0"
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:background="@drawable/button_background"
+                android:text="."
+                android:textColor="@color/textColor"
+                android:textSize="24sp"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:enabled="false"
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/resultButton"
+                android:background="@drawable/button_background_green"
+                android:text="="
+                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:layout_margin="7dp"
+                android:stateListAnimator="@null"
+                android:onClick="resultButtonClicked"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
         </TableRow>
 
     </TableLayout>
