--- a/app/src/main/res/layout/activity_ch4_main.xml
+++ b/app/src/main/res/layout/activity_ch4_main.xml
@@ -16,7 +16,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_weight="1"/>
 
+    <TextView
+        android:id="@+id/expressionTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="44dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:layout_marginEnd="15dp"/>
 
+    <TextView
+        android:id="@+id/resultTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="end"
+        android:textSize="20sp"
+        android:textColor="#aaaaaa"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@id/keypadTableLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
 
     <TableLayout
         android:id="@+id/keypadTableLayout"
