--- a/app/src/main/res/layout/activity_ch4_main.xml
+++ b/app/src/main/res/layout/activity_ch4_main.xml
@@ -87,6 +87,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonModulo"
                 android:background="@drawable/button_background"
                 android:text="%"
                 android:textColor="@color/green"
@@ -99,6 +100,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonDivider"
                 android:background="@drawable/button_background"
                 android:text="/"
                 android:textSize="24sp"
@@ -115,6 +117,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button7"
                 android:background="@drawable/button_background"
                 android:text="7"
                 android:textColor="@color/textColor"
@@ -127,6 +130,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button8"
                 android:background="@drawable/button_background"
                 android:text="8"
                 android:textColor="@color/textColor"
@@ -138,6 +142,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button9"
                 android:background="@drawable/button_background"
                 android:text="9"
                 android:textColor="@color/textColor"
@@ -150,6 +155,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMulti"
                 android:background="@drawable/button_background"
                 android:text="X"
                 android:textSize="24sp"
@@ -166,6 +172,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button4"
                 android:background="@drawable/button_background"
                 android:text="4"
                 android:textColor="@color/textColor"
@@ -178,6 +185,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button5"
                 android:background="@drawable/button_background"
                 android:text="5"
                 android:textColor="@color/textColor"
@@ -189,6 +197,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button6"
                 android:background="@drawable/button_background"
                 android:text="6"
                 android:textColor="@color/textColor"
@@ -201,6 +210,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMinus"
                 android:background="@drawable/button_background"
                 android:text="-"
                 android:textSize="24sp"
@@ -217,6 +227,7 @@
         <TableRow android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button1"
                 android:background="@drawable/button_background"
                 android:text="1"
                 android:textColor="@color/textColor"
@@ -229,6 +240,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button2"
                 android:background="@drawable/button_background"
                 android:text="2"
                 android:textColor="@color/textColor"
@@ -240,6 +252,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button3"
                 android:background="@drawable/button_background"
                 android:text="3"
                 android:textColor="@color/textColor"
@@ -252,6 +265,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonPlus"
                 android:background="@drawable/button_background"
                 android:text="+"
                 android:textSize="24sp"
@@ -281,6 +295,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button0"
                 android:background="@drawable/button_background"
                 android:text="0"
                 android:textColor="@color/textColor"
