--- a/app/src/main/res/layout/activity_ch8_main.xml
+++ b/app/src/main/res/layout/activity_ch8_main.xml
@@ -31,7 +31,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/goHomeButton"
             app:layout_constraintRight_toLeftOf="@id/goBackButton"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:imeOptions="actionDone"/>
 
         <ImageButton
             android:id="@+id/goBackButton"
