Ch8_심플 웹 브라우저 - 04

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
 
     <color name="PomodoroRed">#FFD32F2F</color>
     <color name="transparent">#00000000</color>
+
+    <color name="light_gray">#FFCFCFCF</color>
+    <color name="dark_gray">#FF707070</color>
 </resources>
