--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
 
     <color name="light_gray">#FFCFCFCF</color>
     <color name="dark_gray">#FF707070</color>
+
+    <color name="gray">#aaaaaa</color>
 </resources>
