--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="dark_gray">#FF707070</color>
 
     <color name="gray">#aaaaaa</color>
+
+    <color name="gray_cc">#cccccc</color>
 </resources>
