Ch14_중고거래 앱 - 02

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,6 @@
     <color name="gray">#aaaaaa</color>
 
     <color name="gray_cc">#cccccc</color>
+
+    <color name="gray_ec">#ececec</color>
 </resources>
