--- a/app/src/main/res/layout/ch15_fragment_player.xml
+++ b/app/src/main/res/layout/ch15_fragment_player.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/playerMotionLayout"
     app:layoutDescription="@xml/ch15_fragment_player_scene">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +19,7 @@
         android:id="@+id/ch15_playerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#00ff00"
         app:layout_constraintBottom_toBottomOf="@id/ch15_mainContainerLayout"
         app:layout_constraintStart_toStartOf="@id/ch15_mainContainerLayout"
         app:layout_constraintTop_toTopOf="@id/ch15_mainContainerLayout" />
