--- a/app/src/main/res/layout/ch15_fragment_player.xml
+++ b/app/src/main/res/layout/ch15_fragment_player.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.example.a30androidwithkotlie.ch15_CustomMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/playerMotionLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/playerMotionLayout"
     app:layoutDescription="@xml/ch15_fragment_player_scene">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -50,6 +50,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
+        android:nestedScrollingEnabled="false"
+        android:padding="16dp"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
